gitops/gatekeeper/tests/suite.yaml
apiVersion: test.gatekeeper.sh/v1alpha1
kind: Suite
tests:
  - name: container-hardening
    template: ../templates/k8scontainerhardening.yaml
    constraint: ../constraints/container-hardening.yaml
    cases:
      - name: valid-pod
        object: fixtures/valid-pod.yaml
        assertions:
          - violations: 0
      - name: valid-deployment
        object: fixtures/valid-deployment.yaml
        assertions:
          - violations: 0
      - name: root-container
        object: fixtures/root-container.yaml
        assertions:
          - violations: 1
      - name: nonroot-override-false
        object: fixtures/nonroot-override-false.yaml
        assertions:
          - violations: 1
      - name: missing-drop-all
        object: fixtures/missing-drop-all.yaml
        assertions:
          - violations: 1
      - name: insecure-init-container
        object: fixtures/insecure-init-container.yaml
        assertions:
          - violations: 2
      - name: ephemeral-container
        object: fixtures/ephemeral-container.yaml
        assertions:
          - violations: 0
  - name: allowed-image-tags
    template: ../templates/k8sallowedimagetags.yaml
    constraint: ../constraints/allowed-image-tags.yaml
    cases:
      - name: valid-pod
        object: fixtures/valid-pod.yaml
        assertions:
          - violations: 0
      - name: valid-registry-port-tag
        object: fixtures/valid-registry-port-tag.yaml
        assertions:
          - violations: 0
      - name: valid-sha256-digest
        object: fixtures/valid-sha256-digest.yaml
        assertions:
          - violations: 0
      - name: latest-lowercase
        object: fixtures/latest-lowercase.yaml
        assertions:
          - violations: 1
      - name: latest-uppercase
        object: fixtures/latest-uppercase.yaml
        assertions:
          - violations: 1
      - name: untagged-image
        object: fixtures/untagged-image.yaml
        assertions:
          - violations: 1
      - name: invalid-digest
        object: fixtures/invalid-digest.yaml
        assertions:
          - violations: 1
      - name: invalid-cronjob
        object: fixtures/invalid-cronjob.yaml
        assertions:
          - violations: 1
      - name: ephemeral-container
        object: fixtures/ephemeral-container.yaml
        assertions:
          - violations: 0
  - name: required-resources
    template: ../templates/k8srequiredresources.yaml
    constraint: ../constraints/required-resources.yaml
    cases:
      - name: valid-pod
        object: fixtures/valid-pod.yaml
        assertions:
          - violations: 0
      - name: valid-deployment
        object: fixtures/valid-deployment.yaml
        assertions:
          - violations: 0
      - name: missing-request-cpu
        object: fixtures/missing-request-cpu.yaml
        assertions:
          - violations: 1
      - name: missing-request-memory
        object: fixtures/missing-request-memory.yaml
        assertions:
          - violations: 1
      - name: missing-limit-cpu
        object: fixtures/missing-limit-cpu.yaml
        assertions:
          - violations: 1
      - name: missing-limit-memory
        object: fixtures/missing-limit-memory.yaml
        assertions:
          - violations: 1
      - name: init-missing-resources
        object: fixtures/init-missing-resources.yaml
        assertions:
          - violations: 4
      - name: invalid-cronjob
        object: fixtures/invalid-cronjob.yaml
        assertions:
          - violations: 4
      - name: ephemeral-resources-not-supported
        object: fixtures/ephemeral-container.yaml
        assertions:
          - violations: 0
